--- a/.gitignore
+++ b/.gitignore
@@ -120,7 +120,7 @@ dmypy.json
 
 # End of https://www.gitignore.io/api/python,visualstudiocode
 
-data/*.toml
+data/musicinfo_list.toml
 data/site_generated/*
 data/sources/*
 distribute/*
